--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,10 @@
 *some contests are awards
 *awards should be the country of the winner, but listed as multi-nation
+*Ireland EU fiscal treaty - tag as bailout
+*There are so many presidential appointments - need to find a better way to tag
 ---done---
 *civil unrest - protests
 *civil unrest - society ?
 *business:weapons -> business->defense
 *change business - oil to business - energy
+*201206 - have to redo egypt nom [Posted] The Supreme Constitutional Court of Egypt dissolves the Parliament of Egypt loadorder: 54
